--- a/Research.html
+++ b/Research.html
@@ -59,7 +59,7 @@
 	      <li><a href="Research.html" title="Research"><span class="big">R</span>esearch</a></li>
 	      <li><a href="Teaching.html" title="Teaching"><span class="big">T</span>eaching</a></li>
 	      <li><a href="cursusEN.html" title="CursusEN"><span class="big">C</span>V</a></li>
-		  <li><a href="Recherche.html" title="index"><span class="big">F</span>rançais</a></li>
+		  <li><a href="recherche.html" title="index"><span class="big">F</span>rançais</a></li>
 	    </ul>
 
 
