--- a/recherche.html
+++ b/recherche.html
@@ -84,7 +84,7 @@
 		<br/>
 	Théorie spectrale, guides d’ondes, PMLs
 		<br/>
-	Théorie de Kondratiev, singularité:
+	Théorie de Kondratiev, singularités
 	
    
 <!--
