--- a/cursusEN.html
+++ b/cursusEN.html
@@ -66,6 +66,12 @@
     <div id="page">
 
       <h1>CV</h1>
+	  <h2>2016-2017</h2>
+	    <ul>
+	  <li>02/16-06/16 : Post-doctoral fellow at team DEFI (CMAP), numerical investigation of transmission eigenvalues for the interior transmission problem.</li>
+	  <li>07/16-06/17 : Visiting assistant professor at UC Merced</li>
+	    </ul>
+		
       <h2>2012-2015</h2>
      <ul>
 	<li>PhD in applied mathematics at the Unité de Mathématiques Appliquées, ENSTA ParisTech</li>
