--- a/enseignement.html
+++ b/enseignement.html
@@ -57,20 +57,22 @@
 	    <ul id="menu" class="five">
 	      <li><a href="index.html" title="Accueil"><span class="big">A</span>ccueil</a></li>
 	      <li><a href="recherche.html" title="Recherche"><span class="big">R</span>echerche</a></li>
-	      <li><a href="enseignement.html" title="Monitorat"><span class="big">M</span>onitorat</a></li>
+	      <li><a href="enseignement.html" title="Enseignement"><span class="big">E</span>nseignement</a></li>
 	      <li><a href="cursus.html" title="Cursus"><span class="big">C</span>ursus</a></li>
 		  <li><a href="Teaching.html" title="EnglishVersion"><span class="big">E</span>nglish</a></li>
 	    </ul>
 
     <!-- #page: holds all page content, as well as footer -->
     <div id="page">
+		
+		<h2>2016 </h2>
+        <ul>
+   	<li>Chargée de TD à l'ENSTA ParisTech pour le cours <a href="http://wwwdfr.ensta.fr/Cours/?sigle=AO101"
+       title="AO101"> AO101</a> : Optimisation Quadratique (1ère année)</li> 
+    	<li>Responsable du cours <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2154"> Math23</a>: Vector Calculus (deuxième année), au sein de l'Université de Californie Merced</li>
+         </ul>
 
-      <h1>Cours</h1>
-	  
-      <p>
-Je suis chargée de TD à l'ENSTA Paristech. J'interviens dans les cours suivants : 
-      </p>
-      <h2>Année 2013-2015</h2>
+      <h2>Année 2013-2015 : chargée de TDs à l'ENSTA ParisTech</h2>
  
 
 
@@ -83,7 +85,7 @@ Je suis chargée de TD à l'ENSTA Paristech. J'interviens dans les cours suivant
      title="MA205"> MA205</a> : Fonction d'une variable complexe (2ème année) </li>
        </ul>
 
-     <h2>Année 2012-2013</h2>
+     <h2>Année 2012-2013 : chargée de TDs à l'ENSTA ParisTech</h2>
 
      <ul>
 	<li><a href="http://wwwdfr.ensta.fr/Cours/?sigle=AO101"
