--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <ul id="menu" class="five">
       <li><a href="index.html" title="Accueil"><span class="big">A</span>ccueil</a></li>
       <li><a href="recherche.html" title="Recherche"><span class="big">R</span>echerche</a></li>
-      <li><a href="enseignement.html" title="Monitorat"><span class="big">M</span>onitorat</a></li>
+      <li><a href="enseignement.html" title="Enseignement"><span class="big">E</span>nseignement</a></li>
       <li><a href="cursus.html" title="Cursus"><span class="big">C</span>ursus</a></li>
 	  <li><a href="EnglishVersion.html" title="EnglishVersion"><span class="big">E</span>nglish</a></li>
     </ul>
@@ -70,9 +70,10 @@
   <img src="img/photos/photoC.jpg" width="150" class="floatLeft">
       </div>
       <p>
-      Je suis docteure en mathématiques appliquées, j'ai réalisé ma thèse sous la direction de <a href="http://uma.ensta-paristech.fr/~bonnet"
+      Je suis actuellement assistant professeur à l'Université de Californie Merced, je travaille avec <a href="http://faculty.ucmerced.edu/adkim/"
+    title="Arnold Kim"> Arnold Kim </a> au sein du département de mathématiques appliquées sur la modélisation et la simulation du champ proche électromagnétique dans des structures plasmoniques. J'ai réalisé ma thèse sous la direction de <a href="http://uma.ensta-paristech.fr/~bonnet"
     title="Bonnet Anne Sophie"> Anne-Sophie Bonnet BenDhia </a> et de <a href="http://www.ensta-paristech.fr/~ciarlet/"
-    title="Ciarlet Patrick"> Patrick Ciarlet</a>, au sein de l'équipe POems à l'Unité de Mathématiques Appliquées de l'ENSTA ParisTech.
+    title="Ciarlet Patrick"> Patrick Ciarlet</a>, au sein de l'équipe POems (ENSTA ParisTech). J'ai aussi travaillé avec <a href="http://www.cmapx.polytechnique.fr/~chesnel/"title="Lucas Chesnel"> Lucas Chesnel </a> lors d'un post-doc au sein de l'équipe DEFI.
       </p>
 
 	<h1> Coordonn&eacute;es</h1>
