--- a/recherche.html
+++ b/recherche.html
@@ -57,7 +57,7 @@
 	    <ul id="menu" class="five">
 	      <li><a href="index.html" title="Accueil"><span class="big">A</span>ccueil</a></li>
 	      <li><a href="recherche.html" title="Recherche"><span class="big">R</span>echerche</a></li>
-	      <li><a href="enseignement.html" title="Monitorat"><span class="big">M</span>onitorat</a></li>
+	      <li><a href="enseignement.html" title="Enseignement"><span class="big">E</span>nseignement</a></li>
 	      <li><a href="cursus.html" title="Cursus"><span class="big">C</span>ursus</a></li>
 		  <li><a href="Research.html" title="EnglishVersion"><span class="big">E</span>nglish</a></li>
 	    </ul>
@@ -124,13 +124,17 @@
 
 			<h3>Publications </h3>
 			<ul class='publisItems'>
+				<li >
+					Eigenvalue problems with a sign-changing coefficient,
+			 <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>,&nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~chesnel' >Lucas <span class='publiMemberName'>Chesnel</span></a></span>,  &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> en cours de préparation. </span>
+				</li>
 			<li >
 				Mesh requirements for the finite element approximation of problems with sign-changing coefficients,
-			<span class='author'><a href='http://uma.ensta-paristech.fr/~bonnet' >Anne-Sophie <span class='publiMemberName'>Bonnet-BenDhia</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>, &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> en cours de finalisation. </span>
+			<span class='author'><a href='http://uma.ensta-paristech.fr/~bonnet' >Anne-Sophie <span class='publiMemberName'>Bonnet-BenDhia</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>, &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> 2016, soumis. </span>
 			</li>	
 			<li >
 				On the use of Perfectly Matched Layers at corners for scattering problems with sign-changing coefficients,
-			<span class='author'><a href='http://uma.ensta-paristech.fr/~bonnet' >Anne-Sophie <span class='publiMemberName'>Bonnet-BenDhia</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~chesnel' >Lucas <span class='publiMemberName'>Chesnel</span></a></span>, &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> soumis. </span> <span >&nbsp;&nbsp;</span> [ <a href='http://arxiv.org/pdf/1511.01932.pdf' title='charger http://arxiv.org/pdf/1511.01932.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp;</li>		
+			<span class='author'><a href='http://uma.ensta-paristech.fr/~bonnet' >Anne-Sophie <span class='publiMemberName'>Bonnet-BenDhia</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~chesnel' >Lucas <span class='publiMemberName'>Chesnel</span></a></span>, &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> 2016, en révision. </span> <span >&nbsp;&nbsp;</span>[ <a href='http://arxiv.org/pdf/1511.01932.pdf' title='charger http://arxiv.org/pdf/1511.01932.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp;</li>		
 			</li>	
 			<li >
 				Plasmonic cavity modes: black-hole phenomena captured by Perfectly Matched Layers,
@@ -163,9 +167,6 @@
 
 			<h2> Liens </h2>
      <ul>
-    <li><a href="http://uma.ensta.fr/poems/"title="POEMS"> Site de l'équipe POems</a> </li> 
-    <li><a href="http://uma.ensta.fr/"title="Uma"> Site de l'UMA, ENSTA ParisTech </a> </li>
-    <li><a href="http://www.graduateschool.polytechnique.edu/accueil-graduate-school/doctorat/"title="EDX"> Site de l'EDX</a> </li>
 	<li><a href="BD.html"title="BD"> Mon sujet de thèse en BD : Que sont les plasmons de surface ? </a> </li>
     </ul>
 
