--- a/EnglishVersion.html
+++ b/EnglishVersion.html
@@ -70,9 +70,10 @@
   <img src="img/photos/photoC.jpg" width="150" class="floatLeft">
       </div>
       <p>
-      I've finished my PhD in applied mathematics under the direction of <a href="http://uma.ensta-paristech.fr/~bonnet"
+	      I'm a visiting assistant professor at University of California Merced, I'm working with <a href="http://faculty.ucmerced.edu/adkim/"
+	    title="Arnold Kim"> Arnold Kim </a> in the Applied Maths Department on the modeling and simulation of the electromagnetic near field in plasmonic structures. I did my PhD in applied mathematics under the direction of <a href="http://uma.ensta-paristech.fr/~bonnet"
     title="Bonnet Anne Sophie"> Anne-Sophie Bonnet BenDhia </a> and <a href="http://www.ensta-paristech.fr/~ciarlet/"
-    title="Ciarlet Patrick"> Patrick Ciarlet</a>, at team POems of the Unité de Mathématiques Appliquées, ENSTA ParisTech, France.
+    title="Ciarlet Patrick"> Patrick Ciarlet</a>, at team POems (ENSTA ParisTech, France). I also worked with <a href="http://www.cmapx.polytechnique.fr/~chesnel/"title="Lucas Chesnel"> Lucas Chesnel </a> as a post-doc in team DEFI (CMAP, France).
       </p>
 
 	<h1> Contact</h1>
