--- a/Research.html
+++ b/Research.html
@@ -123,17 +123,21 @@
 
 			<h3>Publications </h3>
 			<ul class='publisItems'>
+				<li >
+					Eigenvalue problems with a sign-changing coefficient,
+			 <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>,&nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~chesnel' >Lucas <span class='publiMemberName'>Chesnel</span></a></span>,  &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> in preparation. </span>
+				</li>
 			<li >
 				Mesh requirements for the finite element approximation of problems with sign-changing coefficients,
-			<span class='author'><a href='http://uma.ensta-paristech.fr/~bonnet' >Anne-Sophie <span class='publiMemberName'>Bonnet-BenDhia</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>, &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> en cours de finalisation. </span>
+			<span class='author'><a href='http://uma.ensta-paristech.fr/~bonnet' >Anne-Sophie <span class='publiMemberName'>Bonnet-BenDhia</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>, &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> 2016, submitted. </span>
 			</li>	
 			<li >
 				On the use of Perfectly Matched Layers at corners for scattering problems with sign-changing coefficients,
-			<span class='author'><a href='http://uma.ensta-paristech.fr/~bonnet' >Anne-Sophie <span class='publiMemberName'>Bonnet-BenDhia</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~chesnel' >Lucas <span class='publiMemberName'>Chesnel</span></a></span>, &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> soumis. </span> <span >&nbsp;&nbsp;</span> [ <a href='http://arxiv.org/pdf/1511.01932.pdf' title='charger http://arxiv.org/pdf/1511.01932.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp;</li>		
+			<span class='author'><a href='http://uma.ensta-paristech.fr/~bonnet' >Anne-Sophie <span class='publiMemberName'>Bonnet-BenDhia</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~chesnel' >Lucas <span class='publiMemberName'>Chesnel</span></a></span>, &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> 2016, in revision. </span> <span >&nbsp;&nbsp;</span> [ <a href='http://arxiv.org/pdf/1511.01932.pdf' title='charger http://arxiv.org/pdf/1511.01932.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp;</li>		
 			</li>	
 			<li >
 				Plasmonic cavity modes: black-hole phenomena captured by Perfectly Matched Layers,
-			<span class='author'><a href='http://uma.ensta-paristech.fr/~bonnet' >Anne-Sophie <span class='publiMemberName'>Bonnet-BenDhia</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~chesnel' >Lucas <span class='publiMemberName'>Chesnel,</span></a></span> &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> PIERS Proceedings, 2013</span>
+			<span class='author'><a href='http://uma.ensta-paristech.fr/~bonnet' >Anne-Sophie <span class='publiMemberName'>Bonnet-BenDhia</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~chesnel' >Lucas <span class='publiMemberName'>Chesnel,</span></a></span> &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> PIERS Proceedings, 2013 </span>
 			<span >&nbsp;&nbsp;</span> [ <a href='http://uma.ensta-paristech.fr/files/publis/2013/2013-proc-uma1367-PIERSFullPaperCarvalho.pdf' title='charger http://uma.ensta-paristech.fr/files/publis/2013/2013-proc-uma1367-PIERSFullPaperCarvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp;</li>			
 		
 	
@@ -162,9 +166,7 @@
 
 			<h2> Links </h2>
      <ul>
-    <li><a href="http://uma.ensta.fr/poems/"title="POEMS"> Team POems website</a> </li> 
-    <li><a href="http://uma.ensta.fr/"title="Uma"> UMA website </a> </li>
-    <li><a href="http://www.graduateschool.polytechnique.edu/accueil-graduate-school/doctorat/"title="EDX"> EDX gradschool website</a> </li>
+
 	<li><a href="BD.html"title="BD"> My PhD explained via a comics (only in French): What are plasmonic waves? </a> </li>
     </ul>
 
