--- a/Teaching.html
+++ b/Teaching.html
@@ -65,12 +65,14 @@
     <!-- #page: holds all page content, as well as footer -->
     <div id="page">
 
-      <h1>Teaching</h1>
-	  
-      <p>
-I'm doing teaching assigments in mathematics at ENSTA Paristech for the following classes: 
-      </p>
-      <h2>2013-2015</h2>
+		<h2>2016 </h2>
+        <ul>
+   	<li>Teaching assistant at ENSTA ParisTech in <a href="http://wwwdfr.ensta.fr/Cours/?sigle=AO101"
+       title="AO101"> AO101</a>: Quadratic optimization (first year)</li> 
+    	<li>Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2154"> Math23</a>: Vector Calculus (second year), at UC Merced</li>
+         </ul>
+		 
+      <h2>2013-2015: teaching assistant at ENSTA ParsiTech</h2>
  
 
 
@@ -83,7 +85,7 @@ I'm doing teaching assigments in mathematics at ENSTA Paristech for the followin
      title="MA205"> MA205</a> : Function of complex variable (second year) </li>
        </ul>
 
-     <h2>2012-2013</h2>
+     <h2>2012-2013: teaching assistant at ENSTA ParsiTech</h2>
 
      <ul>
 	  	<li><a href="http://wwwdfr.ensta.fr/Cours/?sigle=AO101"
