--- a/cursus.html
+++ b/cursus.html
@@ -57,7 +57,7 @@
 	    <ul id="menu" class="five">
 	      <li><a href="index.html" title="Accueil"><span class="big">A</span>ccueil</a></li>
 	      <li><a href="recherche.html" title="Recherche"><span class="big">R</span>echerche</a></li>
-	      <li><a href="enseignement.html" title="Monitorat"><span class="big">M</span>onitorat</a></li>
+	      <li><a href="enseignement.html" title="Enseignement"><span class="big">E</span>nseignement</a></li>
 	      <li><a href="cursus.html" title="Cursus"><span class="big">C</span>ursus</a></li>
 		  <li><a href="cursusEN.html" title="EnglishVersion"><span class="big">E</span>nglish</a></li>
 	    </ul>
@@ -67,6 +67,12 @@
     <div id="page">
 
       <h1>Cursus</h1>
+	  <h2>2016-2017</h2>
+	    <ul>
+	  <li>02/16-06/16 : Post-doctorat au sein de l'équipe DEFI (CMAP) sur le calcul des fréquences de transmission pour le problème de transmission intérieur.</li>
+	  <li>07/16-06/17 : Assitant professeur à l'Univertié de Californie Merced</li>
+	    </ul>
+		
       <h2>2012-2015</h2>
      <ul>
 	<li>Doctorat à l'Unité de Mathématiques Appliquées, ENSTA ParisTech</li>
