modif cv et site web

--- a/EnglishVersion.html
+++ b/EnglishVersion.html
@@ -71,7 +71,8 @@
       </div>
       <p>
 	      I'm a visiting assistant professor at University of California Merced, I'm working with <a href="http://faculty.ucmerced.edu/adkim/"
-	    title="Arnold Kim"> Arnold Kim </a> in the Applied Maths Department on the modeling and simulation of the electromagnetic near field in plasmonic structures. I did my PhD in applied mathematics under the direction of <a href="http://uma.ensta-paristech.fr/~bonnet"
+	    title="Arnold Kim"> Arnold Kim </a> and <a href="http://www.unc.edu/~khatri/"
+	    title="Arnold Kim"> Shilpa Khatri </a> in the Applied Maths Department on the modeling and simulation of the electromagnetic near field in plasmonic structures. I did my PhD in applied mathematics under the direction of <a href="http://uma.ensta-paristech.fr/~bonnet"
     title="Bonnet Anne Sophie"> Anne-Sophie Bonnet BenDhia </a> and <a href="http://www.ensta-paristech.fr/~ciarlet/"
     title="Ciarlet Patrick"> Patrick Ciarlet</a>, at team POems (ENSTA ParisTech, France). I also worked with <a href="http://www.cmapx.polytechnique.fr/~chesnel/"title="Lucas Chesnel"> Lucas Chesnel </a> as a post-doc in team DEFI (CMAP, France).
       </p>
