--- a/Teaching.html
+++ b/Teaching.html
@@ -64,12 +64,15 @@
 
     <!-- #page: holds all page content, as well as footer -->
     <div id="page">
+		<h2>2016-2017 </h2>
+        <ul>
+    	<li>Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2154"> Math23</a>: Vector Calculus (second year), at UC Merced</li>
+         </ul>
 
-		<h2>2016 </h2>
+		<h2>2015-2016 </h2>
         <ul>
    	<li>Teaching assistant at ENSTA ParisTech in <a href="http://wwwdfr.ensta.fr/Cours/?sigle=AO101"
        title="AO101"> AO101</a>: Quadratic optimization (first year)</li> 
-    	<li>Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2154"> Math23</a>: Vector Calculus (second year), at UC Merced</li>
          </ul>
 		 
       <h2>2013-2015: teaching assistant at ENSTA ParsiTech</h2>
@@ -96,7 +99,7 @@
 
 	  
       <p>
-Sometimes I teach also: 
+Occasionnally: 
       </p>
       <ul>
  	<li><a href="http://wwwdfr.ensta.fr/Cours/?sigle=MA201"
