--- a/recherche.html
+++ b/recherche.html
@@ -71,7 +71,9 @@
 
       <p>
     Je travaille sur la propagation des ondes électromagnétiques dans des structures plasmoniques, c'est-à-dire dans des milieux composés d'un diélectrique et d'un métal. 
-	Aux fréquences optiques les métaux présentent des propriétés électromagnétiques inhabituelles, comme une permittivité négative. Ce changement de signe de permittivité (positive pour les diélectrique et négative pour les métaux) permet l'existence d'ondes de surface appelées plasmons de surface dont le confinement et le guidage dans les composants nanophotoniques permettraient de dépasser la limite de diffraction. Mathématiquement ce changement de signe inhibe l'utilisation d'outils classiques d'analyse fonctionnelle pour étudier les problèmes d'électromagnétisme plasmoniques, et les méthodes de type éléments finis échouent pour approcher le champ électromagnétique. Mon travail consiste modéliser ces ondes, proposer un modèle mathématique adéquat à l'aide de la T-coercivité, et fournir une méthode numérique adaptée pour approcher ces ondes lorsque l'interface présente des coins, ceci pour des problèmes de diffraction et pour la recherche de modes guidés dans des guides plasmoniques. Une des difficultés de ces problèmes est aussi l'apparition de singularités hyper ocsillantes aux coins, appelées ondes de trou noir, dont l'étude et l'approximation nécessitent des traitements particuliers.
+	Aux fréquences optiques les métaux présentent des propriétés électromagnétiques inhabituelles, comme une permittivité négative. Ce changement de signe de permittivité (positive pour les diélectrique et négative pour les métaux) permet l'existence d'ondes de surface appelées plasmons de surface dont le confinement et le guidage dans les composants nanophotoniques permettraient de dépasser la limite de diffraction. Mathématiquement ce changement de signe inhibe l'utilisation d'outils classiques d'analyse fonctionnelle pour étudier les problèmes d'électromagnétisme plasmoniques, et les méthodes de type éléments finis échouent pour approcher le champ électromagnétique. Mon travail consiste à modéliser ces ondes, proposer un modèle mathématique adéquat à l'aide de la T-coercivité, et fournir une méthode numérique adaptée pour approcher ces ondes lorsque l'interface présente des coins, ceci pour des problèmes de diffraction et pour la recherche de modes guidés dans des guides plasmoniques. Une des difficultés de ces problèmes est aussi l'apparition de singularités hyper ocsillantes aux coins, appelées ondes de trou noir, dont l'étude et l'approximation nécessitent des traitements particuliers.
+	<br/>
+	De façon plus générale je m'intéresse à l'approximation des champs proches dans les structures plasmoniques, que ce soit en utilisant des formulations faibles + méthode des éléments finis, ou des méthodes de représentation intégrale couplant développements asymptotiques et formules de quadrature.
 	   </p>
 	
 	 <h2>Thèmes de recherche</h2>
@@ -85,6 +87,8 @@
 	Théorie spectrale, guides d’ondes, PMLs
 		<br/>
 	Théorie de Kondratiev, singularités
+	<br/>
+	Méthodes de représentation integrale, développements asymptotiques
 	
    
 <!--
@@ -125,6 +129,10 @@
 			<h3>Publications </h3>
 			<ul class='publisItems'>
 				<li >
+					Nearly singular integrals: subtraction technique for close evaluation near boundaries,
+			 <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>,&nbsp;<span class='author'><a href="http://www.unc.edu/~khatri/" >Shilpa <span class='publiMemberName'>Khatri</span></a></span>,  &nbsp;<span class='author'><a href="http://faculty.ucmerced.edu/adkim/" >Arnold D. <span class='publiMemberName'>Kim</span></a> en cours de préparation. </span>
+				</li>
+				<li >
 					Eigenvalue problems with a sign-changing coefficient,
 			 <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>,&nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~chesnel' >Lucas <span class='publiMemberName'>Chesnel</span></a></span>,  &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> en cours de préparation. </span>
 				</li>
@@ -134,11 +142,11 @@
 			</li>	
 			<li >
 				On the use of Perfectly Matched Layers at corners for scattering problems with sign-changing coefficients,
-			<span class='author'><a href='http://uma.ensta-paristech.fr/~bonnet' >Anne-Sophie <span class='publiMemberName'>Bonnet-BenDhia</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~chesnel' >Lucas <span class='publiMemberName'>Chesnel</span></a></span>, &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> 2016, accepté. </span> <span >&nbsp;&nbsp;</span>[<a href='http://arxiv.org/pdf/1511.01932.pdf' title='charger http://arxiv.org/pdf/1511.01932.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp;</li>		
+			<span class='author'><a href='http://uma.ensta-paristech.fr/~bonnet' >Anne-Sophie <span class='publiMemberName'>Bonnet-BenDhia</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~chesnel' >Lucas <span class='publiMemberName'>Chesnel</span></a></span>, &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> Journal of Computational Physics, vol. 322, 224-247, 2016. </span> <span >&nbsp;&nbsp;</span>[<a href='http://arxiv.org/pdf/1511.01932.pdf' title='charger http://arxiv.org/pdf/1511.01932.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp;</li>		
 			</li>	
 			<li >
 				Plasmonic cavity modes: black-hole phenomena captured by Perfectly Matched Layers,
-			<span class='author'><a href='http://uma.ensta-paristech.fr/~bonnet' >Anne-Sophie <span class='publiMemberName'>Bonnet-BenDhia</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~chesnel' >Lucas <span class='publiMemberName'>Chesnel,</span></a></span> &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> PIERS Proceedings, 2013</span>
+			<span class='author'><a href='http://uma.ensta-paristech.fr/~bonnet' >Anne-Sophie <span class='publiMemberName'>Bonnet-BenDhia</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~chesnel' >Lucas <span class='publiMemberName'>Chesnel,</span></a></span> &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> PROCEEDING of PIERS 2013 in Stockholm, p. 638-642, 2013. </span>
 			<span >&nbsp;&nbsp;</span>[<a href='http://uma.ensta-paristech.fr/files/publis/2013/2013-proc-uma1367-PIERSFullPaperCarvalho.pdf' title='charger http://uma.ensta-paristech.fr/files/publis/2013/2013-proc-uma1367-PIERSFullPaperCarvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a>] &nbsp;&nbsp;</li>			
 		
 	
