--- a/Research.html
+++ b/Research.html
@@ -71,6 +71,8 @@
 
         <p>
 			I study electromagnetic waves in plasmonic structures, made of dielectrics and metals. At optical frequencies metals exhibit unusual electromagnetic properties like a negative permittivity. Due to this sign-changing permittivity (positive for dielectrics and negative for metals), there exist surface electromagnetic waves called surface plasmons. Guiding and confining such particular waves in nanophotonic devices reveal a great interest to overcome the diffraction limit. Mathematically, such change of sign makes the classical tools of functional analysis unusuable to study plasmonic problems, and finite elements method fail to approximate the electromagnetic field. My work consists in providing a model for these plasmonic waves, an adapted mathematical model using the T-coercivity approach, and develop a numerical method to approximate these plasmons when the interface between the two media presents corners. This method is applied to study scattering problems in plasmonics, and the search of guided modes in plasmonic waveguides. One of the difficulties of these problems is the appearance of hyper oscillating singularities at the corners, called black-hole waves, whose characterization and approximation require specific treatment.
+			<br/>
+				More generally I'm interested in computing accurately near fields in plasmonic structures, using weak formulation with finite elements method, or boundary integral representation coupling numerical analysis and asymptotics.
   	   </p>
 	
   	 <h2>Research interests</h2>
@@ -84,6 +86,8 @@
 	Spectral theory, waveguides, PMLs
 	<br/>
 	Kondratiev theory, singularities
+	<br/>
+	Boundary integral representation, Asymptotics
 	
    
   <!--
@@ -124,6 +128,10 @@
 			<h3>Publications </h3>
 			<ul class='publisItems'>
 				<li >
+					Nearly singular integrals: subtraction technique for close evaluation near boundaries,
+			 <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>,&nbsp;<span class='author'><a href="http://www.unc.edu/~khatri/" >Shilpa <span class='publiMemberName'>Khatri</span></a></span>,  &nbsp;<span class='author'><a href="http://faculty.ucmerced.edu/adkim/" >Arnold D. <span class='publiMemberName'>Kim</span></a> en cours de préparation. </span>
+				</li>
+				<li >
 					Eigenvalue problems with a sign-changing coefficient,
 			 <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>,&nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~chesnel' >Lucas <span class='publiMemberName'>Chesnel</span></a></span>,  &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> in preparation. </span>
 				</li>
@@ -133,11 +141,11 @@
 			</li>	
 			<li >
 				On the use of Perfectly Matched Layers at corners for scattering problems with sign-changing coefficients,
-			<span class='author'><a href='http://uma.ensta-paristech.fr/~bonnet' >Anne-Sophie <span class='publiMemberName'>Bonnet-BenDhia</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~chesnel' >Lucas <span class='publiMemberName'>Chesnel</span></a></span>, &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> 2016, accepted. </span> <span >&nbsp;&nbsp;</span> [ <a href='http://arxiv.org/pdf/1511.01932.pdf' title='charger http://arxiv.org/pdf/1511.01932.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp;</li>		
+			<span class='author'><a href='http://uma.ensta-paristech.fr/~bonnet' >Anne-Sophie <span class='publiMemberName'>Bonnet-BenDhia</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~chesnel' >Lucas <span class='publiMemberName'>Chesnel</span></a></span>, &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> Journal of Computational Physics, vol. 322, 224-247, 2016.  </span> <span >&nbsp;&nbsp;</span> [ <a href='http://arxiv.org/pdf/1511.01932.pdf' title='charger http://arxiv.org/pdf/1511.01932.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp;</li>		
 			</li>	
 			<li >
 				Plasmonic cavity modes: black-hole phenomena captured by Perfectly Matched Layers,
-			<span class='author'><a href='http://uma.ensta-paristech.fr/~bonnet' >Anne-Sophie <span class='publiMemberName'>Bonnet-BenDhia</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~chesnel' >Lucas <span class='publiMemberName'>Chesnel,</span></a></span> &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> PIERS Proceedings, 2013 </span>
+			<span class='author'><a href='http://uma.ensta-paristech.fr/~bonnet' >Anne-Sophie <span class='publiMemberName'>Bonnet-BenDhia</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~chesnel' >Lucas <span class='publiMemberName'>Chesnel,</span></a></span> &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> PROCEEDING of PIERS 2013 in Stockholm, p. 638-642, 2013. </span>
 			<span >&nbsp;&nbsp;</span> [ <a href='http://uma.ensta-paristech.fr/files/publis/2013/2013-proc-uma1367-PIERSFullPaperCarvalho.pdf' title='charger http://uma.ensta-paristech.fr/files/publis/2013/2013-proc-uma1367-PIERSFullPaperCarvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp;</li>			
 		
 	
