--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
       </div>
       <p>
       Je suis actuellement assistant professeur à l'Université de Californie Merced, je travaille avec <a href="http://faculty.ucmerced.edu/adkim/"
-    title="Arnold Kim"> Arnold Kim </a> au sein du département de mathématiques appliquées sur la modélisation et la simulation du champ proche électromagnétique dans des structures plasmoniques. J'ai réalisé ma thèse sous la direction de <a href="http://uma.ensta-paristech.fr/~bonnet"
+    title="Arnold Kim"> Arnold Kim </a> et <a href="http://www.unc.edu/~khatri/"
+	    title="Arnold Kim"> Shilpa Khatri </a> au sein du département de mathématiques appliquées sur la modélisation et la simulation du champ proche électromagnétique dans des structures plasmoniques. J'ai réalisé ma thèse sous la direction de <a href="http://uma.ensta-paristech.fr/~bonnet"
     title="Bonnet Anne Sophie"> Anne-Sophie Bonnet BenDhia </a> et de <a href="http://www.ensta-paristech.fr/~ciarlet/"
     title="Ciarlet Patrick"> Patrick Ciarlet</a>, au sein de l'équipe POems (ENSTA ParisTech). J'ai aussi travaillé avec <a href="http://www.cmapx.polytechnique.fr/~chesnel/"title="Lucas Chesnel"> Lucas Chesnel </a> lors d'un post-doc au sein de l'équipe DEFI.
       </p>
