--- a/recherche.html
+++ b/recherche.html
@@ -133,8 +133,8 @@
 			 <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>,&nbsp;<span class='author'><a href="http://www.unc.edu/~khatri/" >Shilpa <span class='publiMemberName'>Khatri</span></a></span>,  &nbsp;<span class='author'><a href="http://faculty.ucmerced.edu/adkim/" >Arnold D. <span class='publiMemberName'>Kim</span></a> en cours de préparation. </span>
 				</li>
 				<li >
-					Eigenvalue problems with a sign-changing coefficient,
-			 <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>,&nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~chesnel' >Lucas <span class='publiMemberName'>Chesnel</span></a></span>,  &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> en cours de préparation. </span>
+					Eigenvalue problems with sign-changing coefficients,
+			 <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>,&nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~chesnel' >Lucas <span class='publiMemberName'>Chesnel</span></a></span>,  &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> 2016, soumis. </span>
 				</li>
 			<li >
 				Mesh requirements for the finite element approximation of problems with sign-changing coefficients,
