--- a/recherche.html
+++ b/recherche.html
@@ -129,16 +129,16 @@
 			<h3>Publications </h3>
 			<ul class='publisItems'>
 				<li >
-					Nearly singular integrals: subtraction technique for close evaluation near boundaries,
-			 <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>,&nbsp;<span class='author'><a href="http://www.unc.edu/~khatri/" >Shilpa <span class='publiMemberName'>Khatri</span></a></span>,  &nbsp;<span class='author'><a href="http://faculty.ucmerced.edu/adkim/" >Arnold D. <span class='publiMemberName'>Kim</span></a> en cours de préparation. </span>
+					Asymptotic analysis for close evaluation for layer potentials,
+			 <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>,&nbsp;<span class='author'><a href="http://www.unc.edu/~khatri/" >Shilpa <span class='publiMemberName'>Khatri</span></a></span>,  &nbsp;<span class='author'><a href="http://faculty.ucmerced.edu/adkim/" >Arnold D. <span class='publiMemberName'>Kim</span></a> soumis. </span>
 				</li>
 				<li >
 					Eigenvalue problems with sign-changing coefficients,
-			 <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>,&nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~chesnel' >Lucas <span class='publiMemberName'>Chesnel</span></a></span>,  &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> 2016, soumis. </span>
+			 <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>,&nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~chesnel' >Lucas <span class='publiMemberName'>Chesnel</span></a></span>,  &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> , Compte Rendus Mathématiques, 2017, accepté. </span>
 				</li>
 			<li >
 				Mesh requirements for the finite element approximation of problems with sign-changing coefficients,
-			<span class='author'><a href='http://uma.ensta-paristech.fr/~bonnet' >Anne-Sophie <span class='publiMemberName'>Bonnet-BenDhia</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>, &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> 2016, soumis. </span><span >&nbsp;&nbsp;</span>[<a href='https://hal.archives-ouvertes.fr/hal-01335153/document' title='charger https://hal.archives-ouvertes.fr/hal-01335153/document' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp;
+			<span class='author'><a href='http://uma.ensta-paristech.fr/~bonnet' >Anne-Sophie <span class='publiMemberName'>Bonnet-BenDhia</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>, &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a> 2017, en révision. </span><span >&nbsp;&nbsp;</span>[<a href='https://hal.archives-ouvertes.fr/hal-01335153/document' title='charger https://hal.archives-ouvertes.fr/hal-01335153/document' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp;
 			</li>	
 			<li >
 				On the use of Perfectly Matched Layers at corners for scattering problems with sign-changing coefficients,
