change and updates for AY 2017-2018

--- a/enseignement.html
+++ b/enseignement.html
@@ -64,10 +64,15 @@
 
     <!-- #page: holds all page content, as well as footer -->
     <div id="page">
+		<h2>2017-2018 </h2>
+        <ul>
+    	<li>Responsable de cours pour <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2154"> Math 23</a>: Vector Calculus (première-deuxième année), au sein de l'Université de Californie Merced</li>
+		    	<li>Responsable de cours pour <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2167"> Math 131</a>: Numerical Analysis for Engineers (troisième année), au sein de l'Université de Californie Merced</li>
+         </ul>
 		
 			<h2>2016-2017 </h2>
 	        <ul>
-	    	<li>Responsable du cours <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2154"> Math23</a>: Vector Calculus (deuxième année), au sein de l'Université de Californie Merced</li>
+	    	<li>Responsable du cours <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2154"> Math 23</a>: Vector Calculus (première-deuxième année), au sein de l'Université de Californie Merced</li>
 	         </ul>
 		
 		<h2>2015-2016 </h2>
