--- a/Teaching.html
+++ b/Teaching.html
@@ -64,9 +64,14 @@
 
     <!-- #page: holds all page content, as well as footer -->
     <div id="page">
+		<h2>2017-2018 </h2>
+        <ul>
+    	  <li>Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2154"> Math 23</a>: Vector Calculus (first-second year), at UC Merced</li>
+		  <li>Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2167"> Math 131</a>: Numerical Analysis for Engineers (third year), at UC Merced</li>
+         </ul>
 		<h2>2016-2017 </h2>
         <ul>
-    	<li>Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2154"> Math23</a>: Vector Calculus (second year), at UC Merced</li>
+    	<li>Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2154"> Math 23</a>: Vector Calculus (first-second year), at UC Merced</li>
          </ul>
 
 		<h2>2015-2016 </h2>
