--- a/cursus.html
+++ b/cursus.html
@@ -66,7 +66,16 @@
     <!-- #page: holds all page content, as well as footer -->
     <div id="page">
 
-      <h1>Cursus <span >&nbsp;&nbsp;</span> [ <a href="CV_carvalho_2016-2017.pdf" title='charger CV_carvalho_2016-2017.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF</a> ] &nbsp;&nbsp;</h1>
+      <h1>Cursus <span >&nbsp;&nbsp;</span> [ <a href="CV_carvalho_2016-2017.pdf" title='charger Dr_carvalho_CV_07_2017.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF</a> ] &nbsp;&nbsp;</h1>
+	  <h2>2017-2018</h2>
+	    <ul>
+	  <li>Assistant professeur à l'Univertié de Californie Merced</li>
+	    </ul>
+  	  <h2>2016-2017</h2>
+  	    <ul>
+  	  <li>02/16-06/16 : Post-doctorat au sein de l'équipe DEFI (CMAP) sur le calcul des fréquences de transmission pour le problème de transmission intérieur.</li>
+  	  <li>07/16-06/17 : Assistant professeur à l'Univertié de Californie Merced</li>
+  	    </ul>
 	  
 	  <h2>2016-2017</h2>
 	    <ul>
