--- a/cursusEN.html
+++ b/cursusEN.html
@@ -66,10 +66,16 @@
     <div id="page">
 
       <h1>CV 					
-<span >&nbsp;&nbsp;</span> [ <a href="CV_carvalho_2016-2017.pdf" title='charger CV_carvalho_2016-2017.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp; </h1>
+<span >&nbsp;&nbsp;</span> [ <a href="CV_carvalho_2016-2017.pdf" title='charger Dr_carvalho_CV_07_2017.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp; </h1>
 	  
-
-
+<h2>2018-</h2>
+  <ul>
+<li>Assistant professor at UC Merced</li>
+  </ul>
+<h2>2017-2018</h2>
+  <ul>
+<li>Visiting assistant professor at UC Merced</li>
+  </ul>
 
 	  <h2>2016-2017</h2>
 	    <ul>
