--- a/Research.html
+++ b/Research.html
@@ -54,13 +54,13 @@
 
     <!-- #menu: topbar menu of the site.  Use the helper classes .two, .three, .four and .five to set
                 the widths for 2, 3, 4 and 5 item menus. -->
-	    <ul id="menu" class="five">
-	      <li><a href="EnglishVersion.html" title="Index"><span class="big">I</span>ndex</a></li>
-	      <li><a href="Research.html" title="Research"><span class="big">R</span>esearch</a></li>
-	      <li><a href="Teaching.html" title="Teaching"><span class="big">T</span>eaching</a></li>
-	      <li><a href="cursusEN.html" title="CursusEN"><span class="big">C</span>V</a></li>
-		  <li><a href="recherche.html" title="index"><span class="big">F</span>rançais</a></li>
-	    </ul>
+        <ul id="menu" class="five">
+          <li><a href="index.html" title="Home"><span class="big">H</span>ome</a></li>
+          <li><a href="Research.html" title="Research"><span class="big">R</span>esearch</a></li>
+          <li><a href="Teaching.html" title="Teaching"><span class="big">T</span>eaching</a></li>
+          <li><a href="cursusEN.html" title="CursusEN"><span class="big">C</span>V</a></li>
+    	  <!-- <li><a href="index.html" title="index"><span class="big">F</span>rançais</a></li> >
+        </ul>
 
 
     <!-- #page: holds all page content, as well as footer -->
