--- a/index.html
+++ b/index.html
@@ -14,6 +14,102 @@
 
 <head>
 
+    <title> Carvalho Camille. </title>
+
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="author" content="fullahead.org" />
+    <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
+    <meta name="description" content="A valid, XHTML 1.0 template" />
+    <meta name="robots" content="index, follow, noarchive" />
+    <meta name="googlebot" content="noarchive" />
+
+    <link rel="stylesheet" type="text/css" href="css/html.css" media="screen, projection, tv " />
+    <link rel="stylesheet" type="text/css" href="css/layout.css" media="screen, projection, tv" />
+    <link rel="stylesheet" type="text/css" href="css/print.css" media="print" />
+
+    <!-- Conditional comment to apply opacity fix for IE #content background.
+         Invalid CSS, but can be removed without harming design -->
+    <!--[if gt IE 5]>
+    <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
+    <![endif]-->
+
+  </head>
+
+
+  <body>
+
+  <!-- #wrapper: centers the content and sets the width -->
+  <div id="wrapper">
+
+    <!-- #content: applies the white, dropshadow background -->
+    <div id="content">
+
+      <!-- #header: holds site title and subtitle -->
+      <div id="header">
+        <h1><span class="big darkBrown">C</span>arvalho <span class="big darkBrown">C</span>amille</h1>
+      </div>
+
+
+
+      <!-- #menu: topbar menu of the site.  Use the helper classes .two, .three, .four and .five to set
+                  the widths for 2, 3, 4 and 5 item menus. -->
+      <ul id="menu" class="five">
+        <li><a href="index.html" title="Home"><span class="big">H</span>ome</a></li>
+        <li><a href="Research.html" title="Research"><span class="big">R</span>esearch</a></li>
+        <li><a href="Teaching.html" title="Teaching"><span class="big">T</span>eaching</a></li>
+        <li><a href="cursusEN.html" title="CursusEN"><span class="big">C</span>V</a></li>
+  	  <!-- <li><a href="index.html" title="index"><span class="big">F</span>rançais</a></li> >
+      </ul>
+
+      <!-- #page: holds all page content, as well as footer -->
+      <div id="page">
+
+        <h1>Presentation</h1>
+        <div class="width25 floatLeft">
+    <img src="img/photos/14.jpg" width="130" class="floatLeft">
+        </div>
+        <p>
+  	      I'm a visiting assistant professor in the Applied Math Unit at the University of California Merced. <br><br>
+		  I'm interested in developing new efficient numerical methods for interface problems, specially in electromagnetics and in plasmonics. I work on wave propagation phenomena and related problems. I have been developing a finite-element based method to accurately capture the near-field in plasmonic structures, and I started to work on integral representation methods for close evaluation problems.<br>
+		  <br>
+ 		 I did my PhD in applied mathematics under the direction of <a href="http://uma.ensta-paristech.fr/~bonnet"
+       title="Bonnet Anne Sophie"> Anne-Sophie Bonnet BenDhia </a> and <a href="http://www.ensta-paristech.fr/~ciarlet/"
+       title="Ciarlet Patrick"> Patrick Ciarlet</a>, at team POems (ENSTA ParisTech, France), worked with <a href="http://www.cmapx.polytechnique.fr/~chesnel/"title="Lucas Chesnel"> Lucas Chesnel </a> as a post-doc in team DEFI (CMAP, France), and currently collaborate with <a href="http://faculty.ucmerced.edu/adkim/"
+  	    title="Arnold Kim"> Arnold Kim </a> and <a href="http://faculty.ucmerced.edu/skhatri3/"
+  	    title="Arnold Kim"> Shilpa Khatri </a> at UC Merced.
+		<br><br>
+
+        </p>
+        <div>
+			  <img src="img/summary_pmls.png" width="210" align ="left" hspace = "5">
+    <img src="img/Triangle_Tconform.jpg" width="150" hspace = "5">
+	    <img src="img/vp.jpg" width="140" hspace = "5">
+	    <img src="img/bie_test_helmholtz.png" width="150" align ="right" >
+	
+		 
+        </div>
+		
+			<br><br>
+  	<h1> Contact</h1>
+	
+  	<p>
+  		 carvalho0camille AT gmail.com <br>
+		 UC Merced, 5200 N Lake Rd, Merced CA 95348 <br>
+		 Office hours: Thursday 3pm-5pm
+  	</p>
+
+
+	<!-- 
+		  I'm currently working with <a href="http://faculty.ucmerced.edu/adkim/"
+  	    title="Arnold Kim"> Arnold Kim </a> and <a href="http://faculty.ucmerced.edu/skhatri3/"
+  	    title="Arnold Kim"> Shilpa Khatri </a> 
+		 I did my PhD in applied mathematics under the direction of <a href="http://uma.ensta-paristech.fr/~bonnet"
+      title="Bonnet Anne Sophie"> Anne-Sophie Bonnet BenDhia </a> and <a href="http://www.ensta-paristech.fr/~ciarlet/"
+      title="Ciarlet Patrick"> Patrick Ciarlet</a>, at team POems (ENSTA ParisTech, France). I also worked with <a href="http://www.cmapx.polytechnique.fr/~chesnel/"title="Lucas Chesnel"> Lucas Chesnel </a> as a post-doc in team DEFI (CMAP, France).
+		>
+
+
+	<!--
 
   <title> Carvalho Camille. </title>
 
@@ -28,32 +124,25 @@
   <link rel="stylesheet" type="text/css" href="css/layout.css" media="screen, projection, tv" />
   <link rel="stylesheet" type="text/css" href="css/print.css" media="print" />
 
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
 
+	 
 </head>
 
 
 <body>
 
-<!-- #wrapper: centers the content and sets the width -->
 <div id="wrapper">
 
-  <!-- #content: applies the white, dropshadow background -->
+
   <div id="content">
 
-    <!-- #header: holds site title and subtitle -->
     <div id="header">
       <h1><span class="big darkBrown">C</span>arvalho <span class="big darkBrown">C</span>amille</h1>
     </div>
 
 
 
-    <!-- #menu: topbar menu of the site.  Use the helper classes .two, .three, .four and .five to set
-                the widths for 2, 3, 4 and 5 item menus. -->
+
     <ul id="menu" class="five">
       <li><a href="index.html" title="Accueil"><span class="big">A</span>ccueil</a></li>
       <li><a href="recherche.html" title="Recherche"><span class="big">R</span>echerche</a></li>
@@ -62,7 +151,6 @@
 	  <li><a href="EnglishVersion.html" title="EnglishVersion"><span class="big">E</span>nglish</a></li>
     </ul>
 
-    <!-- #page: holds all page content, as well as footer -->
     <div id="page">
 
       <h1>Présentation</h1>
@@ -84,7 +172,7 @@
 	</p>
 
 
-
+>
 
 
 
