--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 	
   	<p>
   		 carvalho0camille AT gmail.com <br>
-		 UC Merced, 5200 N Lake Rd, Merced CA 95348 <br>
-		 Office hours: Thursday 3pm-5pm
+		 UC Merced, 5200 N Lake Rd, Merced CA 95343 <br>
+		 Office hours: Thursday 3pm-5pm <br>
   	</p>
 
 
