modify website, update all pages, research needs to be done

--- a/Teaching.html
+++ b/Teaching.html
@@ -59,18 +59,23 @@
           <li><a href="Research.html" title="Research"><span class="big">R</span>esearch</a></li>
           <li><a href="Teaching.html" title="Teaching"><span class="big">T</span>eaching</a></li>
           <li><a href="cursusEN.html" title="CursusEN"><span class="big">C</span>V</a></li>
-    	  <!-- <li><a href="index.html" title="index"><span class="big">F</span>rançais</a></li> >
         </ul>
 
 
     <!-- #page: holds all page content, as well as footer -->
     <div id="page">
-		<h2>2017-2018 </h2>
+		<h2>Spring 2018 </h2>
+        <ul>
+		  <li>Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2167"> Math 131</a>: Numerical Analysis for Engineers (third year), at UC Merced</li>
+		  <li> <a href="https://carvalhocamille.github.io/math-131/" title="Github"><span class="big">G</span>ithub repository with lecture notes</a></li>
+	  </ul>
+		 
+		<h2>Fall 2017 </h2>
         <ul>
     	  <li>Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2154"> Math 23</a>: Vector Calculus (first-second year), at UC Merced</li>
 		  <li>Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2167"> Math 131</a>: Numerical Analysis for Engineers (third year), at UC Merced</li>
          </ul>
-		<h2>2016-2017 </h2>
+		<h2>Fall 2016 - Spring 2017 </h2>
         <ul>
     	<li>Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2154"> Math 23</a>: Vector Calculus (first-second year), at UC Merced</li>
          </ul>
