--- a/cursusEN.html
+++ b/cursusEN.html
@@ -67,36 +67,36 @@
     <div id="page">
 
       <h1>CV 					
-<span >&nbsp;&nbsp;</span> [ <a href="Dr_carvalho_CV_07_2017.pdf" title='charger Dr_carvalho_CV_07_2017.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp; </h1>
+<span >&nbsp;&nbsp;</span> [ <a href="Dr_carvalho_CV_2018.pdf" title='charger Dr_carvalho_CV_2018.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp; </h1>
 	  
 <h2>2018-</h2>
   <ul>
 <li>Assistant professor at UC Merced</li>
   </ul>
-<h2>2017-2018</h2>
+<h2>2017-2018: VAP</h2>
   <ul>
 <li>Visiting assistant professor at UC Merced</li>
   </ul>
 
-	  <h2>2016-2017</h2>
+	  <h2>2016-2017: Postdoctoral fellow and VAP </h2>
 	    <ul>
-	  <li>02/16-06/16 : Post-doctoral fellow at team DEFI (CMAP), numerical investigation of transmission eigenvalues for the interior transmission problem.</li>
+	  <li>02/16-06/16 : Post-doctoral fellow at team DEFI (CMAP), numerical investigation of transmission eigenvalues for the interior transmission problem.</li> <br>
 	  <li>07/16-06/17 : Visiting assistant professor at UC Merced</li>
 	    </ul>
 		
-      <h2>2012-2015</h2>
+      <h2>2012-2015: Ph.D</h2>
      <ul>
 	<li>PhD in applied mathematics at the Unité de Mathématiques Appliquées, ENSTA ParisTech</li>
      </ul>
-      <h2>2009-2012: ENSTA ParisTech engineer school cursus</h2>
+      <h2>2009-2012: ENSTA ParisTech engineer school cursus, M.S. in Applied Math</h2>
 
      <ul>
-	<li>2011-2012: thrid year at ENSTA ParisTech specialized in Modelization and Simulation, Master 2 AN&EDP at Université Pierre et Marie Curie</li>
-	<li>2010-2011: second year at ENSTA ParisTech specialized in Mathematical Engineering Simulation </li>
+	<li>2011-2012: thrid year at ENSTA ParisTech specialized in Modelization and Simulation, Master 2 AN&EDP at Université Pierre et Marie Curie</li> <br>
+	<li>2010-2011: second year at ENSTA ParisTech specialized in Mathematical Engineering Simulation </li> <br>
 	<li>2009-2010: first year at ENSTA ParisTech  </li>
       </ul>
       <h2>2006-2009: Classes préparatoires </h2>
-	<li>2006-2009: preparation for engineer school entrance exams, (PCSI, PC*) at lycée Pierre de Fermat (Toulouse) </li>
+	<li>Preparation for engineer school entrance exams, (PCSI, PC*) at lycée Pierre de Fermat (Toulouse) </li>
 
 
 
