--- a/recherche.html
+++ b/recherche.html
@@ -127,7 +127,7 @@
 <span >&nbsp;&nbsp;</span> [ <a href="These_carvalho.pdf" title='charger These_carvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp;	<span >&nbsp;&nbsp;</span> [ <a href="these_carvalho_soutenance.pdf" title='charger these_carvalho_soutenance.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Présentation </a> ] &nbsp;&nbsp;</li>
 
 			<h3>Publications </h3>
-			<ul class='publisItems'>
+			<ol class='publisItems'>
 				<li >
 					Asymptotic analysis for close evaluation for layer potentials,
 			 <span class='author'><a href='http://uma.ensta-paristech.fr/~carvalho' >Camille <span class='publiMemberName'>Carvalho</span></a></span>,&nbsp;<span class='author'><a href="http://faculty.ucmerced.edu/skhatri3/" >Shilpa <span class='publiMemberName'>Khatri</span></a></span>,  &nbsp;<span class='author'><a href="http://faculty.ucmerced.edu/adkim/" >Arnold D. <span class='publiMemberName'>Kim</span></a> soumis. </span>
@@ -150,11 +150,11 @@
 			<span >&nbsp;&nbsp;</span>[<a href='http://uma.ensta-paristech.fr/files/publis/2013/2013-proc-uma1367-PIERSFullPaperCarvalho.pdf' title='charger http://uma.ensta-paristech.fr/files/publis/2013/2013-proc-uma1367-PIERSFullPaperCarvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a>] &nbsp;&nbsp;</li>			
 		
 	
-			</ul>
+			</ol>
 			
 		
 			<h3 >Conferences</h3>
-			<ul class='publisItems'>
+			<ol class='publisItems'>
 				<li >Local analysis of near-fields in acoustic scattering,<br/>
 				<span class='author'>Camille <span class='publiMemberName'>Carvalho</span></a></span>,&nbsp; <span class='author'><a href='http://faculty.ucmerced.edu/skhatri3/' >Shilpa <span class='publiMemberName'>Khatri</span></a></span>&nbsp; <span class='author'><a href='http://faculty.ucmerced.edu/adkim/' >Arnold D. <span class='publiMemberName'>Kim</span></a></span>, WAVES, Minneapolis, 2017</span></li>				
 				<li >Plasmonic waveguide : T-coercivity approach for Maxwell's equations,<br/>
@@ -173,7 +173,7 @@
 			<li >Plasmonic cavity modes with sign changing permittivity,<br/>
 			<span class='author'><a href='http://uma.ensta-paristech.fr/~bonnet' >Anne-Sophie <span class='publiMemberName'>Bonnet-BenDhia</span></a></span>, <span class='author'>Camille <span class='publiMemberName'>Carvalho</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~chesnel' >Lucas <span class='publiMemberName'>Chesnel</span></a></span>, <span class='author'><a href='http://uma.ensta-paristech.fr/~ciarlet' >Patrick <span class='publiMemberName'>Ciarlet Jr.</span></a></span>, &nbsp;<span class='author'><a href='http://uma.ensta-paristech.fr/~claeys' >Xavier <span class='publiMemberName'>Claeys,</span></a> WAVES, Tunis,2013</span>
 			<span >&nbsp;&nbsp;</span> [ <a href='http://uma.ensta-paristech.fr/files/publis/2013/2013-conf-uma1365-Waves2013CarvalhoV1.pdf' title='charger http://uma.ensta-paristech.fr/files/publis/2013/2013-conf-uma1365-Waves2013CarvalhoV1.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp;</li>
-			</ul>
+			</ol>
 
 			<h2> Liens </h2>
      <ul>
