modifiy title parts in research

--- a/Research.html
+++ b/Research.html
@@ -112,7 +112,7 @@ The close-evaluation problem in boundary integral methods refers to large errors
 	 </div>	
 			
   	 
-   <h2>Multi-scale modeling of light scattering by nano-particles</h2>	
+   <h2>Light scattering by nano-particles</h2>	
 		
    <p> 
 	   The study light scattering by metal nano-particles situated closely over a substrate is a fundamental problem for understanding the extent to which controlling optical fields on the nanoscale leads to desired effects at macroscopic scales where measurements are taken. Because these metal nano-particles are situated closely to a substrate,surface plasmons interact strongly with the substrate surface. To design an efficient numerical method, we combine several techniques such as multi-scale finite element method, boundary integral equations, and asymptotic analysis. 
